--- a/CV.Management.Web/Views/Shared/_LegacyLayout.cshtml
+++ b/CV.Management.Web/Views/Shared/_LegacyLayout.cshtml
@@ -6,18 +6,18 @@
 
     <title>@ViewBag.Title</title>
 
-    @Styles.Render("~/legacy/style")
-    @Styles.Render("~/legacy/croppie")
-    @Scripts.Render("~/legacy/jquery")
-    @Scripts.Render("~/legacy/moment")
-    @Scripts.Render("~/legacy/bootstrap")
-    @Scripts.Render("~/legacy/bootstrap-datepicker")
-    @Styles.Render("~/legacy/bootstrap-datepicker")
-    @Scripts.Render("~/legacy/jquery-scrollbar")
+    @Styles.Render("~/legacy/css/style")
+    @Styles.Render("~/legacy/css/croppie")
+    @Scripts.Render("~/legacy/js/jquery")
+    @Scripts.Render("~/legacy/js/moment")
+    @Scripts.Render("~/legacy/js/bootstrap")
+    @Scripts.Render("~/legacy/js/bootstrap-datepicker")
+    @Styles.Render("~/legacy/css/bootstrap-datepicker")
+    @Scripts.Render("~/legacy/js/jquery-scrollbar")
 
-    @Scripts.Render("~/legacy/jquery-mask")
-    @Scripts.Render("~/legacy/autosize")
-    @Scripts.Render("~/legacy/croppie")
+    @Scripts.Render("~/legacy/js/jquery-mask")
+    @Scripts.Render("~/legacy/js/autosize")
+    @Scripts.Render("~/legacy/js/croppie")
 
     <script>
 		function number_format (number, decimals, decPoint, thousandsSep) {
