--- a/CV.Management.Web/Views/Home/Index.cshtml
+++ b/CV.Management.Web/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using CV.Management.Web.Models;
+@{
     ViewBag.Title = "Profile";
 }
 
@@ -38,7 +39,10 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-sm-12">
-                        @Html.Partial("_Education")
+                        @Html.Partial("_Education", new EducationViewModel
+                        {
+                            Education = new List<EducationItem>()
+                        });
                     </div>
                 </div>
             </div>
@@ -68,10 +72,7 @@
         </div>
         <div id="collapse4" class="panel-collapse collapse">
             <div class="panel-body">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-                minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat.
+                @Html.Partial("_Language")
             </div>
         </div>
     </div>
