--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -40,9 +40,27 @@
                 <div class="row">
                     <div class="col-sm-12">
                         @Html.Partial("_Education", new EducationViewModel
-                        {
-                            Education = new List<EducationItem>()
-                        });
+                   {
+                       Education = new List<EducationItem>()
+                       {
+                           new EducationItem
+                           {
+                               Degree = "Master of Business Administration",
+                               FromYear = 1999,
+                               ToYear = 2001,
+                               Institution = "University of Latvia"
+
+                           },
+                           new EducationItem
+                           {
+                               Degree = "Master of Law",
+                               FromYear = 1994,
+                               ToYear = 2000,
+                               Institution = "University of Latvia"
+
+                           }
+                       }
+                   })
                     </div>
                 </div>
             </div>
