--- a/CV.Management.Web/Views/Shared/_Layout.cshtml
+++ b/CV.Management.Web/Views/Shared/_Layout.cshtml
@@ -21,6 +21,10 @@
                 </button>
                 <a class="navbar-brand" href="/"><img src="~/Content/Images/logo.png" alt="Amrop"></a>
             </div>
+            <ul class="nav navbar-nav">
+                <li><a href="/cv/profile/en">EN</a></li>
+                <li><a href="/cv/profile/lv">LV</a></li>
+            </ul>
             <div class="navbar-collapse collapse">
                 @Html.Partial("_LoginPartial")
             </div>
